t# This is a combination of 24 commits.
updates realted to frind list

information

sequrity concepts

updates

updates

added the db config

learn updates

practical concepts

reach hooks updates

practical aspects

practical

practical updates

question only

questions add on

change to server and prototype

udpates realted prototype

inheritace in prototype

prototypal Inheritance or class inheritance

Hooks updates

monogo udptes

transaction error handling

learn updatees

new questions

questions

Remove .env from tracking and add to .gitignore

git ignore changes for public view

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /client/node_modules
 /server/node_modules
+/server/.env
+/server/learn/Read/learn
+/server/learn/Read/learn
 /.pnp
 .pnp.js
 
